terraform/security_group.tf
resource "aws_security_group" "public_security_group" {
  name        = "public_security_group"
  description = "Allow traffic on public VM"
  vpc_id      = aws_vpc.restaurant_vpc.id


  ingress {
    description = "SSH connection"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Http connection"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "public_security_group"
  }
}

resource "aws_security_group" "private_security_group" {
  name        = "private security group"
  description = "Allow traffic on private VM"
  vpc_id      = aws_vpc.restaurant_vpc.id


  ingress {
    description = "SSH from Internet"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_subnet.subnet["public_subnet"].cidr_block]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]


  }


  tags = {
    Name = "private_security_group"
  }
}

resource "aws_security_group" "allow_different_traffic" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.restaurant_vpc.id

  dynamic "ingress" {

    for_each = var.inbound_rule

    content {

      description = ingress.key
      from_port   = ingress.value.from_port
      to_port     = ingress.value.to_port
      protocol    = ingress.value.protocol
      cidr_blocks = ingress.value.cidr_blocks

    }

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]


  }


  tags = {
    Name = "allow_tls"
  }
}
